fix page-title 2nd in About.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ select {
 }
 
 .bg-page-title {
-  background: url('/assets/images/page-titles/page-title.jpg') !important;
+  background: url('../images/page-titles/page-title.jpg') !important;
 }
 
 .ebook-mt {
